--- a/index.html
+++ b/index.html
@@ -2754,19 +2754,10 @@
                     <div class="mini-stat"><div class="mini-label">Balance Neto</div><div class="mini-value" id="balanceMes">$0</div></div>
                 </div>
                 <div class="card" id="dailyCapCard">
-                    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:12px;">
-                        <h3 style="margin:0;"><i class="fas fa-calendar-day"></i> Tope diario</h3>
-                        <span id="dailyCapMonthLabel" style="font-size:0.8rem; color:var(--text-muted);"></span>
-                    </div>
-                    <div id="dailyCapCurrent" style="padding:12px; border-radius:12px; background:var(--bg-body); border:1px solid rgba(148,163,184,0.15);"></div>
-                    <div id="dailyCapList" style="margin-top:12px;"></div>
-                    <div style="margin-top:10px; font-size:0.8rem; color:var(--text-muted);">No incluye Vivienda ni Servicios Públicos.</div>
-                </div>
-                <div class="card">
-                    <h3 style="margin-bottom:15px;"><i class="fas fa-calendar-day"></i> Tope Diario</h3>
+                    <h3 style="margin-bottom:15px;"><i class="fas fa-calendar-day"></i> Tope del día</h3>
                     <div class="stats-grid">
                         <div class="mini-stat">
-                            <div class="mini-label">Tope diario de hoy</div>
+                            <div class="mini-label">Tope del día</div>
                             <div class="mini-value" id="dailyCapValue">$0</div>
                         </div>
                         <div class="mini-stat debt">
@@ -2778,23 +2769,7 @@
                             <div class="mini-value" id="dailyCapStatus">OK</div>
                         </div>
                     </div>
-                    <div style="margin-top:15px;">
-                        <div style="font-size:0.8rem; color:var(--text-light); text-transform:uppercase; letter-spacing:0.08em; margin-bottom:8px;">Resumen últimos días</div>
-                        <div id="dailyCapList">
-                            <div class="mini-stat" style="margin-bottom:8px;">
-                                <div class="mini-label">--/--</div>
-                                <div class="mini-value">$0 · OK</div>
-                            </div>
-                            <div class="mini-stat" style="margin-bottom:8px;">
-                                <div class="mini-label">--/--</div>
-                                <div class="mini-value">$0 · OK</div>
-                            </div>
-                            <div class="mini-stat">
-                                <div class="mini-label">--/--</div>
-                                <div class="mini-value">$0 · OK</div>
-                            </div>
-                        </div>
-                    </div>
+                    <div style="margin-top:10px; font-size:0.8rem; color:var(--text-muted);">Tope del día (no incluye Vivienda ni Servicios Públicos).</div>
                 </div>
                 <div class="card">
                     <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
@@ -3393,10 +3368,10 @@
         }
 
         function updateDailyCapIndicator(){
-            const currentContainer=document.getElementById('dailyCapCurrent');
-            const listContainer=document.getElementById('dailyCapList');
-            const monthLabel=document.getElementById('dailyCapMonthLabel');
-            if(!currentContainer||!listContainer||!monthLabel)return;
+            const dailyCapValue=document.getElementById('dailyCapValue');
+            const dailySpendValue=document.getElementById('dailySpendValue');
+            const dailyCapStatus=document.getElementById('dailyCapStatus');
+            if(!dailyCapValue||!dailySpendValue||!dailyCapStatus)return;
 
             let d=0,e=0,n=0;
             transactions.forEach(t=>{
@@ -3430,7 +3405,11 @@
             const vy=currentViewDate.getFullYear();
             const daysInMonth=new Date(vy, vm+1, 0).getDate();
             const excludedCategories=new Set(['vivienda','servicios_publicos']);
-            const dailyTotals=Array(daysInMonth).fill(0);
+            const today=new Date();
+            const isCurrentMonth=today.getMonth()===vm&&today.getFullYear()===vy;
+            const currentDay=isCurrentMonth?Math.min(today.getDate(),daysInMonth):1;
+            let gastoHastaAyer=0;
+            let gastoDia=0;
 
             transactions.forEach(t=>{
                 if(t.tipo!=='gasto'&&t.tipo!=='credito')return;
@@ -3438,58 +3417,23 @@
                 if(excludedCategories.has(categoryId))return;
                 const [ty,tm,td]=t.fecha.split('-').map(Number);
                 if((tm-1)!==vm||ty!==vy)return;
-                dailyTotals[td-1]+=parseFloat(t.monto);
+                const monto=parseFloat(t.monto);
+                if(td===currentDay){
+                    gastoDia+=monto;
+                }else if(td<currentDay){
+                    gastoHastaAyer+=monto;
+                }
             });
 
-            let acumulado=0;
-            const resumen=[];
-            for(let day=1;day<=daysInMonth;day++){
-                const gastoDia=dailyTotals[day-1]||0;
-                const gastoAcumuladoHastaAyer=acumulado;
-                const disponibleAlInicioDia=saldoDisponible-gastoAcumuladoHastaAyer;
-                const diasRestantesIncluyendoHoy=daysInMonth-day+1;
-                const topeDia=Math.max(0,disponibleAlInicioDia/diasRestantesIncluyendoHoy);
-                const excedido=gastoDia>topeDia;
-                resumen.push({day,gastoDia,topeDia,excedido});
-                acumulado+=gastoDia;
-            }
+            const disponibleAlInicioDia=saldoDisponible-gastoHastaAyer;
+            const diasRestantesIncluyendoHoy=daysInMonth-currentDay+1;
+            const topeDia=Math.max(0,disponibleAlInicioDia/diasRestantesIncluyendoHoy);
+            const excedido=gastoDia>topeDia;
 
-            const today=new Date();
-            const isCurrentMonth=today.getMonth()===vm&&today.getFullYear()===vy;
-            const currentDay=isCurrentMonth?Math.min(today.getDate(),daysInMonth):1;
-            const currentData=resumen[currentDay-1];
-            const statusLabel=currentData.excedido?'Excedido':'OK';
-            const statusColor=currentData.excedido?'var(--danger)':'var(--success)';
-            const statusBg=currentData.excedido?'var(--danger-light)':'var(--success-light)';
-
-            currentContainer.style.background=statusBg;
-            currentContainer.style.borderColor=statusColor;
-            currentContainer.innerHTML=`
-                <div style="display:flex; justify-content:space-between; align-items:center;">
-                    <div>
-                        <div style="font-weight:600;">Día ${currentDay}</div>
-                        <div style="font-size:0.8rem;color:var(--text-muted);">Tope sugerido: ${formatMoney(currentData.topeDia)}</div>
-                    </div>
-                    <div style="text-align:right;">
-                        <div style="font-weight:700;color:${statusColor};">${statusLabel}</div>
-                        <div style="font-size:0.85rem;color:var(--text-muted);">Gasto: ${formatMoney(currentData.gastoDia)}</div>
-                    </div>
-                </div>`;
-
-            monthLabel.textContent=currentViewDate.toLocaleDateString('es-CO',{month:'long',year:'numeric'});
-            listContainer.innerHTML=resumen.map(item=>{
-                const rowStatus=item.excedido?'Excedido':'OK';
-                const rowColor=item.excedido?'var(--danger)':'var(--success)';
-                const rowBg=item.excedido?'var(--danger-light)':'transparent';
-                const isToday=item.day===currentDay;
-                return `<div style="display:flex; justify-content:space-between; align-items:center; padding:8px 10px; border-bottom:1px solid rgba(148,163,184,0.2); background:${isToday?rowBg:'transparent'};">
-                    <div>
-                        <div style="font-weight:600;">Día ${item.day}</div>
-                        <div style="font-size:0.75rem;color:var(--text-muted);">Gasto ${formatMoney(item.gastoDia)} · Tope ${formatMoney(item.topeDia)}</div>
-                    </div>
-                    <div style="font-weight:700;color:${rowColor};">${rowStatus}</div>
-                </div>`;
-            }).join('');
+            dailyCapValue.textContent=formatMoney(topeDia);
+            dailySpendValue.textContent=formatMoney(gastoDia);
+            dailyCapStatus.textContent=excedido?'Excedido':'OK';
+            dailyCapStatus.style.color=excedido?'var(--danger)':'var(--success)';
         }
 
         function updateDashboard(){let d=0,e=0,n=0,i=0,g=0; const dm=calculateDebtByCard(); const vm=currentViewDate.getMonth(); const vy=currentViewDate.getFullYear();
