--- a/index.html
+++ b/index.html
@@ -2814,7 +2814,7 @@
                         <input type="hidden" id="editingId" value="">
                         <div class="form-grid">
                             <div class="form-group full-width"><label>Tipo</label><select id="tipo" required onchange="handleTipoChange()"><option value="gasto">💸 Gasto</option><option value="ingreso">💰 Ingreso</option><option value="credito">💳 Crédito</option><option value="pago_tarjeta">📉 Abono TC</option><option value="transferencia">🔄 Transferencia</option></select></div>
-                            <div id="creditConfig" class="form-group full-width hidden" style="background:#fff1f2; padding:15px; border-radius:12px; border:1px solid #fda4af;"><div style="display:grid; grid-template-columns:repeat(4, minmax(0, 1fr)); gap:15px;"><div class="form-group"><label style="color:var(--danger);">Tarjeta</label><select id="tarjetaCredito"></select></div><div class="form-group"><label style="color:var(--danger);">Cuotas</label><input type="number" id="cuotas" value="1"></div><div class="form-group"><label style="color:var(--danger);">Cuotas pagadas</label><input type="number" id="cuotasPagadas" value="0" min="0"></div><div class="form-group"><label style="color:var(--danger);">Primer Pago</label><input type="date" id="fechaPrimerPago"></div></div></div>
+                            <div id="creditConfig" class="form-group full-width hidden" style="background:#fff1f2; padding:15px; border-radius:12px; border:1px solid #fda4af;"><div style="display:grid; grid-template-columns:repeat(3, minmax(0, 1fr)); gap:15px;"><div class="form-group"><label style="color:var(--danger);">Tarjeta</label><select id="tarjetaCredito"></select></div><div class="form-group"><label style="color:var(--danger);">Cuotas</label><input type="number" id="cuotas" value="1"></div><div class="form-group"><label style="color:var(--danger);">Cuotas pagadas</label><input type="number" id="cuotasPagadas" value="0" min="0"></div></div></div>
                             <div id="divPagoTarjeta" class="form-group full-width hidden" style="background:#ecfdf5; padding:15px; border-radius:12px; border:1px solid #6ee7b7;"><div class="form-group"><label style="color:var(--success);">Tarjeta a Pagar</label><select id="tarjetaDestinoPago"></select></div></div>
                             <div class="form-group" id="metodoPagoDiv"><label id="lblMetodoPago">Método</label><select id="metodoPago"><option value="debito">Débito</option><option value="efectivo">Efectivo</option><option value="nequi">Nequi</option></select></div>
                             <div class="form-group hidden" id="metodoDestinoDiv"><label>Destino</label><select id="metodoDestino"><option value="debito">Débito</option><option value="efectivo">Efectivo</option><option value="nequi">Nequi</option></select></div>
@@ -3837,21 +3837,25 @@
                 const tc=document.getElementById('tarjetaCredito').value;
                 const c=parseInt(document.getElementById('cuotas').value);
                 const pagadasRaw=parseInt(document.getElementById('cuotasPagadas').value);
-                const fp=document.getElementById('fechaPrimerPago').value;
-                if(!fp||!c||c<=0){showToast('Completa fecha y cuotas válidas','error');alert('Completa fecha y cuotas válidas');return;}
                 const cardData=findCardById(tc);
                 const cardName=cardData?.name||'';
                 const paymentDay=cardData?.diaPago?parseInt(cardData.diaPago):15;
-                let proximaPago=new Date(fp);
-                proximaPago=new Date(proximaPago.getFullYear(),proximaPago.getMonth(),paymentDay);
-                if(Number.isNaN(proximaPago.getTime())){showToast('Fecha de primer pago inválida','error');alert('Fecha de primer pago inválida');return;}
+                if(!c||c<=0){showToast('Completa cuotas válidas','error');alert('Completa cuotas válidas');return;}
+                const today=new Date();
+                const todayLocal=new Date(today.getFullYear(), today.getMonth(), today.getDate());
+                const formatLocalDate=(date)=>`${date.getFullYear()}-${String(date.getMonth()+1).padStart(2,'0')}-${String(date.getDate()).padStart(2,'0')}`;
+                const fechaPrimerPago=formatLocalDate(todayLocal);
+                let proximaPago=buildPaymentDate(todayLocal.getFullYear(), todayLocal.getMonth(), paymentDay);
+                if(proximaPago < todayLocal){
+                    proximaPago=buildPaymentDate(todayLocal.getFullYear(), todayLocal.getMonth()+1, paymentDay);
+                }
                 d.cardId=tc;
                 d.cardName=cardName;
                 d.esCredito=true;
                 d.cuotas=c;
                 d.totalDeuda=m;
-                d.fechaPrimerPago=fp;
-                d.proximaFechaPago=proximaPago.toISOString().split('T')[0];
+                d.fechaPrimerPago=fechaPrimerPago;
+                d.proximaFechaPago=formatLocalDate(proximaPago);
                 const pagadas=Number.isNaN(pagadasRaw)?0:Math.min(Math.max(pagadasRaw,0),c);
                 d.cuotasPagadas=pagadas;
                 tempTransactionData=d;
@@ -3873,7 +3877,7 @@
         function confirmSaveTransaction(){if(tempTransactionData)saveTransaction(tempTransactionData);closeModal('creditModal');}
         async function saveTransaction(d){const btn=document.getElementById('btnSubmitText');if(btn)btn.classList.add('is-loading');try{if(editingTransactionId)await db.collection('transactions').doc(editingTransactionId).update(d);else await db.collection('transactions').add(d); cancelEdit(); loadTransactions(); showToast(editingTransactionId?'Actualizado':'Guardado','success');}catch(e){saveToLocal(d);loadTransactions();showToast('Guardado localmente (offline)','warning');}finally{if(btn)btn.classList.remove('is-loading');}}
         function cancelEdit(){editingTransactionId=null; document.getElementById('transactionForm').reset(); document.getElementById('formTitle').textContent='Nueva Transacción'; document.getElementById('btnCancelar').classList.add('hidden'); document.getElementById('btnSubmitText').textContent='Guardar'; handleTipoChange();}
-        window.editTransaction=function(id){const t=transactions.find(x=>x.id===id);if(!t)return;editingTransactionId=id;switchView('transacciones');document.getElementById('tipo').value=t.tipo;handleTipoChange();const m=document.getElementById('monto');m.value=t.monto;formatCurrencyInput(m);document.getElementById('descripcion').value=t.descripcion;document.getElementById('fecha').value=t.fecha;document.getElementById('miembro').value=t.miembro;if(t.tipo==='credito'){document.getElementById('tarjetaCredito').value=resolveCreditCardId(t);document.getElementById('cuotas').value=t.cuotas;document.getElementById('cuotasPagadas').value=t.cuotasPagadas||0;document.getElementById('fechaPrimerPago').value=t.fechaPrimerPago||'';}else if(t.tipo==='pago_tarjeta'){document.getElementById('metodoPago').value=t.metodoPago;document.getElementById('tarjetaDestinoPago').value=t.tarjetaDestino;}else{document.getElementById('metodoPago').value=t.metodoPago;if(t.tipo==='transferencia')document.getElementById('metodoDestino').value=t.metodoDestino;}document.getElementById('formTitle').textContent='Editar';document.getElementById('btnSubmitText').textContent='Actualizar';document.getElementById('btnCancelar').classList.remove('hidden');setTimeout(()=>{document.getElementById('categoria').value=t.categoria;const e=new Event('change');document.getElementById('categoria').dispatchEvent(e);setTimeout(()=>{if(t.subcategoria)document.getElementById('subcategoria').value=t.subcategoria;},50);},100);}
+        window.editTransaction=function(id){const t=transactions.find(x=>x.id===id);if(!t)return;editingTransactionId=id;switchView('transacciones');document.getElementById('tipo').value=t.tipo;handleTipoChange();const m=document.getElementById('monto');m.value=t.monto;formatCurrencyInput(m);document.getElementById('descripcion').value=t.descripcion;document.getElementById('fecha').value=t.fecha;document.getElementById('miembro').value=t.miembro;if(t.tipo==='credito'){document.getElementById('tarjetaCredito').value=resolveCreditCardId(t);document.getElementById('cuotas').value=t.cuotas;document.getElementById('cuotasPagadas').value=t.cuotasPagadas||0;}else if(t.tipo==='pago_tarjeta'){document.getElementById('metodoPago').value=t.metodoPago;document.getElementById('tarjetaDestinoPago').value=t.tarjetaDestino;}else{document.getElementById('metodoPago').value=t.metodoPago;if(t.tipo==='transferencia')document.getElementById('metodoDestino').value=t.metodoDestino;}document.getElementById('formTitle').textContent='Editar';document.getElementById('btnSubmitText').textContent='Actualizar';document.getElementById('btnCancelar').classList.remove('hidden');setTimeout(()=>{document.getElementById('categoria').value=t.categoria;const e=new Event('change');document.getElementById('categoria').dispatchEvent(e);setTimeout(()=>{if(t.subcategoria)document.getElementById('subcategoria').value=t.subcategoria;},50);},100);}
         window.deleteTransaction=async function(id){
             if(!confirm("¿Estás seguro?\nEsta acción no se puede deshacer."))return;
             try{
