Add dashboard summary stats placeholders

--- a/index.html
+++ b/index.html
@@ -2791,6 +2791,24 @@
                     </div>
                     <div class="mini-stat"><div class="mini-label">Balance Neto</div><div class="mini-value" id="balanceMes">$0</div></div>
                 </div>
+                <div class="stats-grid">
+                    <div class="mini-stat">
+                        <div class="mini-label">Gasto diario promedio del mes</div>
+                        <div class="mini-value" id="avgDailySpend">$0</div>
+                    </div>
+                    <div class="mini-stat">
+                        <div class="mini-label">Tasa de ahorro</div>
+                        <div class="mini-value" id="savingsRate">0%</div>
+                    </div>
+                    <div class="mini-stat">
+                        <div class="mini-label">Uso de cupos de TC</div>
+                        <div class="mini-value" id="creditUtilization">0%</div>
+                    </div>
+                    <div class="mini-stat">
+                        <div class="mini-label">Flujo neto real del mes</div>
+                        <div class="mini-value" id="netCashFlow">$0</div>
+                    </div>
+                </div>
                 <div class="card" id="dailyCapCard">
                     <h3 style="margin-bottom:15px;"><i class="fas fa-calendar-day"></i> Tope del día</h3>
                     <div class="stats-grid">
